# gamercade_console

./: .gitignore  5r5g4b output.json  Cargo.toml  README.md  mark.gcrom  pong.gcrom  ryu_test.gcrom  shmup.gcrom  test.lua  test2.lua  wasm_test.wasm
gamercade_app/: Cargo.toml  README.md
gamercade_app/src/: app.rs  client_task.rs  ips.rs  main.rs  urls.rs
gamercade_app/src/auth/: auth_client.rs  auth_state.rs  mod.rs
gamercade_app/src/chat/: chat_client.rs  chat_thread.rs  mod.rs
gamercade_app/src/local_directory/: game.rs  game_footprint.rs  image_cache.rs  mod.rs  permission_level.rs  tag.rs  user.rs
gamercade_app/src/modes/: mod.rs
gamercade_app/src/modes/arcade_mode/: creator_dashboard.rs  download_window.rs  login.rs  manage_game.rs  mod.rs  new_game.rs  online.rs  online_browsing.rs  sign_up.rs
gamercade_app/src/modes/library_mode/: mod.rs
gamercade_app/src/modes/settings_mode/: mod.rs
gamercade_app/src/task_manager/: auth.rs  authors.rs  game.rs  http.rs  mod.rs  platform.rs  release.rs  rom.rs  super_task_manager.rs  tags.rs
gamercade_app/src/view/: browsing.rs  creator_dashboard.rs  edit_game.rs  login.rs  mod.rs  offline_browsing.rs  online_browsing.rs  sign_up.rs
gamercade_app/src/view/modes/: arcade_mode.rs  mod.rs  offline_mode.rs  online_mode.rs  settings_mode.rs
gamercade_audio/: Cargo.toml  README.md
gamercade_audio/src/: consts.rs  envelope_definition.rs  lib.rs  sound_engine.rs  sound_rom.rs  sound_rom_instance.rs
gamercade_audio/src/envelope/: envelope_definition.rs  exponential_ramp.rs  linear_ramp.rs  mod.rs
gamercade_audio/src/instruments/: index_interpolator.rs  instrument_data_definition.rs  instrument_definition.rs  instrument_instance.rs  mod.rs  wavetable_oscillator.rs
gamercade_audio/src/instruments/fm/: algorithm.rs  fm_waveform.rs  mod.rs  operator_definition.rs  operator_instance.rs  patch_definition.rs
gamercade_audio/src/instruments/sampler/: mod.rs  sample_definition.rs  sample_oscillator.rs
gamercade_audio/src/instruments/wavetable/: mod.rs  wavetable_definition.rs  wavetable_generator.rs
gamercade_audio/src/notes/: mod.rs  note.rs  note_name.rs
gamercade_audio/src/playback/: mod.rs  sfx_playback.rs  song_playback.rs
gamercade_audio/src/tracker/: chain.rs  mod.rs  phrase.rs  song.rs
gamercade_cli/: Cargo.toml  README.md
gamercade_cli/src/: main.rs  watch.rs
gamercade_cli/src/commands/: bundler.rs  console.rs  mod.rs
gamercade_console/: Cargo.toml  README.md
gamercade_console/src/: main.rs  pixel_buffer.rs
gamercade_console/src/api/: api_example.rs  audio_api.rs  data_api.rs  draw_api.rs  graphics_parameter_api.rs  input_api.rs  mod.rs  multiplayer_api.rs  random_api.rs  text_api.rs
gamercade_console/src/console/: mod.rs  network.rs  wasm_console.rs
gamercade_console/src/console/bindings/: audio_binding.rs  data_binding.rs  draw_binding.rs  graphics_parameter_binding.rs  input_binding.rs  multiplayer_binding.rs  random_binding.rs  text_binding.rs
gamercade_console/src/console/contexts/: audio_context.rs  data_context.rs  draw_context.rs  input_context.rs  mod.rs  multiplayer_context.rs  random_context.rs  text_context.rs
gamercade_console/src/console/input/: gamepad_bindings.rs  key_bindings.rs  key_types.rs  local_input_manager.rs  mod.rs  player_input_entry.rs
gamercade_console/src/gui/: controller_gui.rs  framework.rs  mod.rs  play_mode_gui.rs
gamercade_core/: Cargo.toml  README.md
gamercade_core/src/: lib.rs  pixel_buffer.rs  rom.rs
gamercade_core/src/graphics/: color.rs  frame_rate.rs  graphics_parameters.rs  palette.rs  resolution.rs  sprite_iter.rs  sprites.rs
gamercade_core/src/input/: input_code.rs  input_state.rs  mod.rs  mouse_state.rs
gamercade_editor/: 4bit output.json  Cargo.toml  README.md  fm algorithm diagram.psd
gamercade_editor/src/: main.rs
gamercade_editor/src/editor_data/: editor_rom.rs  editor_sounds_data.rs  editor_sprite_sheet.rs  mod.rs
gamercade_editor/src/ui/: editor.rs  mod.rs  rom_editor.rs
gamercade_editor/src/ui/audio/: audio_editor.rs  audio_editor_help.rs  audio_list.rs  chain_editor.rs  instrument_editor.rs  mod.rs  oscilloscope.rs  pattern_editor.rs  sfx_editor.rs  song_editor.rs
gamercade_editor/src/ui/graphics/: graphics_editor.rs  mod.rs
gamercade_fs/: Cargo.toml  README.md
gamercade_fs/src/: bundler.rs  data_pack.rs  lib.rs  rom.rs
gamercade_fs/src/editor_data/: editor_graphics_data.rs  editor_palette.rs  editor_rom.rs  editor_sounds_data.rs
gamercade_interface/: Cargo.toml  README.md  build.rs
gamercade_interface/proto/: auth.proto  author.proto  chat.proto  common.proto  game.proto  games.proto  image.proto  images.proto  platform.proto  release.proto  review.proto  rom.proto  tag.proto  user.proto
gamercade_interface/src/: filter.rs  lib.rs
gamercade_interface/src/output/: auth.rs  author.rs  chat.rs  common.rs  game.rs  games.rs  image.rs  images.rs  mod.rs  platform.rs  release.rs  review.rs  rom.rs  tag.rs  users.rs
gamercade_interface/src/security/: common_passwords.rs  mod.rs  password.rs
gamercade_protos/: Cargo.toml  build.rs
gamercade_protos/proto/: chat.proto  common.proto  games.proto  images.proto  platform.proto  users.proto
gamercade_protos/src/: lib.rs  network_session.rs
gamercade_rs/: Cargo.toml  README.md
gamercade_rs/src/: lib.rs  raw.rs
gamercade_rs/src/api/: audio.rs  data.rs  draw.rs  graphics_parameters.rs  input.rs  mod.rs  multiplayer.rs  text.rs
gamercade_sound_engine/: Cargo.toml  README.md
gamercade_sound_engine/src/: lib.rs  sound_engine.rs  sound_rom_instance.rs
gamercade_sound_engine/src/envelope/: envelope_instance.rs  exponential_ramp.rs  mod.rs
gamercade_sound_engine/src/instruments/: instrument_instance.rs  mod.rs
gamercade_sound_engine/src/instruments/fm/: fm_waveform.rs  mod.rs  operator_instance.rs  (+1 more)
gamercade_sound_engine/src/playback/: chain_playback.rs  phrase_playback.rs  sfx_playback.rs  song_playback.rs
gamercade_tools/: 4bit_color.rs  5r5g4b_color.rs  Cargo.toml  README.md
gamercade_tools/output/: 4bit_color.gce  5r5g4b_color.gce
(+260 files in other folders)
