[package]
name = "gamercade_audio"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Audio functionality for Gamercade and related projects"
homepage = "https://gamercade.io"
repository = "https://github.com/gamercade-io/gamercade_audio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
arrayvec = { version = "0.7.4", features = ["serde"] }
tinystr = "0.7.5"
rtrb = "0.3.0"
fastrand = "2.0.2"
base64 = "0.22.0"