[package]
name = "gamercade_console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "console"
path = "src/main.rs"

[dependencies]
# GC Dependencies
gamercade_core = { path = "../gamercade_core" }
gamercade_audio = { path = "../gamercade_audio" }
gamercade_sound_engine = { path = "../gamercade_sound_engine" }

# General Improvements
hashbrown = "0.12.3"
parking_lot = "0.12.1"

# Windowing & Graphics
winit = "0.26.1"
pixels = "0.9.0"
winit_input_helper = "0.12.0"

# GUI Stuff
egui = "0.17"
egui_wgpu_backend = "0.17"
egui-winit = "0.17"

# Macros & Helpers
paste = "1.0.8"

# Serialization / File Loading etc
bincode = "1.3.3"
serde = { version = "1.0.144", features = ["derive"] }
zstd = "0.11"
bytemuck = "1.12.1"

# Scripting
wasmtime = { version = "0.40.1", features = ["cranelift"] }

# Random
fastrand = "1.8.0"

# Audio
cpal = "0.13.5"

# Networking
ggrs = "0.9.2"

# File Picker Dialog
rfd = "0.10.0"

# Input
gilrs = "0.9.0"