[package]
name = "gamercade_console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "console"
path = "src/main.rs"

[dependencies]
# GC Dependencies
gamercade_fs = { path = "../gamercade_fs" }
gamercade_core = { path = "../gamercade_core" }
gamercade_audio = { path = "../gamercade_audio" }
gamercade_sound_engine = { path = "../gamercade_sound_engine" }
gamercade_interface = { path = "../gamercade_interface" }

# General Improvements
hashbrown = { version = "0.14.3", features = ["serde"] }
parking_lot = "0.12.1"

# Windowing & Graphics TODO Update These
winit = { version = "0.28.6", features = ["serde"] }
pixels = "0.12.1"
winit_input_helper = "0.14.1"

# GUI Stuff TODO Update These
egui = "0.21.0"
egui-wgpu = "0.21.0"
egui-winit = { version = "0.21.1", default-features = false, features = ["links"] }

# Macros & Helpers
paste = "1.0.14"

# Serialization / File Loading etc
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
bytemuck = "1.15.0"

# Scripting
wasmtime = "20.0.0"

# Random
fastrand = "2.0.2"

# Audio
cpal = "0.15.3"

# Networking
ggrs = "0.10.2"

# File Picker Dialog
rfd = "0.14.1"

# Input
gilrs = "0.10.6"

# Cli
clap = { version = "4.5.4", features = ["derive"] }
