[package]
name = "gamercade_core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core functionality for Gamercade and related projects"
homepage = "https://gamercade.io"
repository = "https://github.com/gamercade-io/gamercade_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
serde-big-array = "0.5.1"
base64 = "0.22.0"
bytemuck = { version = "1.15.0", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
