[package]
name = "gamercade_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Gamercade Dependencies
gamercade_core = { path = "../gamercade_core" }
gamercade_audio = { path = "../gamercade_audio" }

# Serialization
serde = { version = "1.0.141", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.82"
zstd = "0.11"

# Window and Rendering
egui_glow = { version = "0.18.1", features = ["winit"] }
egui = "0.18.1"
glutin = "0.28.0"

# File Dialogs
rfd = "0.9.1"

# Image Manipulation
image = "0.24.2"

# General Improvements
hashbrown = "0.12.3"