[package]
name = "gamercade_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "editor"
path = "src/main.rs"

[dependencies]
# Gamercade Dependencies
gamercade_core = { path = "../gamercade_core" }
gamercade_audio = { path = "../gamercade_audio" }
gamercade_sound_engine = { path = "../gamercade_sound_engine" }

# Serialization
serde = { version = "1.0.144", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.85"
zstd = "0.11"

# Window and Rendering
eframe = "0.19.0"

# File Dialogs
rfd = "0.10.0"

# Image Manipulation
image = "0.24.3"

# General Improvements
hashbrown = "0.12.3"

# Audio Things
rtrb = "0.2.2"
hound = "3.4.0"