[package]
name = "gamercade_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "editor"
path = "src/main.rs"

[dependencies]
# Gamercade Dependencies
gamercade_fs = { path = "../gamercade_fs" }
gamercade_core = { path = "../gamercade_core" }
gamercade_audio = { path = "../gamercade_audio" }
gamercade_sound_engine = { path = "../gamercade_sound_engine" }

# Serialization
serde = { version = "1.0.198", features = ["derive"] }

# Window and Rendering
eframe = "0.27.2"
egui_plot = "0.27.2"

# File Dialogs
rfd = "0.14.1"

# Image Manipulation
image = "0.25.1"

# General Improvements
hashbrown = "0.14.3"
tinystr = "0.7.5"

# Audio Things
rtrb = "0.3.0"
hound = "3.5.1"