[package]
name = "gamercade_fs"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Gamercade File System Abstractions"
homepage = "https://gamercade.io"
repository = "https://github.com/gamercade-io/gamercade_console"
keywords = ["gamedev"]

[dependencies]
gamercade_audio = { path = "../gamercade_audio" }
gamercade_sound_engine = { path = "../gamercade_sound_engine" }
gamercade_core = { path = "../gamercade_core" }

serde = { version = "1.0.163", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.96"
zstd = "0.12.3"
base64 = "0.22.0"
bytemuck = "1.15.0"