[package]
name = "gamercade_protos"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "gRPC and Proto definitions for Gamercade"
homepage = "https://gamercade.io"
repository = "https://github.com/gamercade-io/gamercade_protos"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
prost = "0.11.6"
serde = { version = "1.0.144", features = ["derive"] }

[build-dependencies]
tonic-build = "0.8.4"
