[package]
name = "gamercade_rs"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A safe wrapper around Gamercade's Raw Api"
homepage = "https://gamercade.io"
repository = "https://github.com/gamercade-io/gamercade_console"
keywords = ["gamedev"]

[dependencies]
paste = "1.0.8"