[package]
name = "gamercade_tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "4bit_color"
path = "4bit_color.rs"

[[bin]]
name = "5r5g4b_color"
path = "5r5g4b_color.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Gamercade Dependencies
gamercade_core = { path = "../gamercade_core" }

# Serialization
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
